Added gitignore to ignore benchmark artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,9 @@ CodeCoverage/
 TestResult.xml
 nunit-*.xml
 
+# Ignore BenchmarkDotNet artifacts
+BenchmarkDotNet.Artifacts/
+
 ################################################################################
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
